Fix blog column alignment breakpoint

--- a/static/bootstrap/css/bootstrap-theme-mysmeuh.css
+++ b/static/bootstrap/css/bootstrap-theme-mysmeuh.css
@@ -474,7 +474,7 @@ a.badge:hover {
   padding-left: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 991px) {
   .homepage-blogs {
     padding-left: 0;
   }
